# creativity

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  index.html  manifest.webmanifest  netlify.toml  pyproject.toml  sw.js
.github/workflows/: deploy-pages.yml  verify.yml
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
assets/: README.md
assets/sprites/: sprites.js
css/: style.css
examples/orders_service/: README.md  pyproject.toml
examples/orders_service/orders_service/: cache.py  db.py  main.py  models.py  storage.py
examples/orders_service/tests/: test_unit.py
israel-transit-mcp/: README.md  pyproject.toml  smithery.yaml
israel-transit-mcp/scripts/: scheduled_briefing.py  verify_end_to_end.py
israel-transit-mcp/src/israel_transit_mcp/: aggregator.py  config.py  models.py  runner.py
israel-transit-mcp/src/israel_transit_mcp/sources/: __init__.py
js/: audio.js  data.js  game.js
qa_agent/: analyze.py  boundaries.py  cli.py  config.py  llm.py  rerank.py
qa_agent/prompts/: rerank_system.md
qa_agent/sources/: __init__.py  atlassian.py  base.py  confluence.py  git.py  jira.py
scripts/: demo_live_mcp.py
src/israel_transit_mcp/: aggregator.py  app.py  keywords.py  server.py
src/israel_transit_mcp/sources/: base.py  google_routes.py  rss_news.py
src/israel_transit_mcp/store/: baselines.py  db.py
src/israel_transit_mcp/tools/: __init__.py  delete_route.py  morning_briefing.py  save_route.py
tools/: make_icons.py  verify_fever.js
(+7 files in other folders)
