[project]
name = "qa-agent"
version = "0.0.1"
description = "An AI QA engineer that finds real integration-test gaps, writes integration tests against real services, and learns from each run. Human-in-the-loop."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "gitpython>=3.1",
    "pydantic>=2.6",
]

[project.optional-dependencies]
llm = [
    "ollama>=0.3",
    "anthropic>=0.40",
]
runner = [
    "pytest>=8.0",
    "testcontainers[mssql,redis]>=4.7",
    "localstack-client>=2.5",
    "httpx>=0.27",
]
memory = [
    "sqlite-vec>=0.1.3",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
qa-agent = "qa_agent.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qa_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
