[project]
name = "orders-service"
version = "0.0.1"
description = "Example FastAPI microservice used as the demo target for qa-agent."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sqlalchemy>=2.0",
    "pyodbc>=5.1",
    "redis>=5.0",
    "boto3>=1.34",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orders_service"]
